# hl_mai

./: README.md  cart_service_index.yml  commands.sql  docker-compose.yaml  performance.md  product_service_index.yml  register_users.py  run_service.sh  user_service_index.yml
config/: db.env  proxysql.cnf
cpp/: CMakeLists.txt
cpp/auth_service/: CMakeLists.txt  kafka_consumer.cpp  main.cpp
cpp/auth_service/include/: authentication_common.h  kafka_config.h  request_handler_factory.h  service_initializer.h  user.h  user_base.h  user_cache.h  user_validator.h
cpp/auth_service/src/: authentication_common.cpp  kafka_config.cpp  request_handler_factory.cpp  service_initializer.cpp  user.cpp  user_base.cpp  user_cache.cpp  user_validator.cpp
cpp/cart_service/: CMakeLists.txt  main.cpp
cpp/cart_service/include/: cart.h  cart_base.h  request_handler_factory.h  service_initializer.h
cpp/cart_service/src/: cart.cpp  cart_base.cpp  request_handler_factory.cpp  service_initializer.cpp
cpp/cmake/: conan.cmake
cpp/product_service/: CMakeLists.txt  main.cpp
cpp/product_service/include/: product.h  product_base.h  product_validator.h  request_handler_factory.h  service_initializer.h
cpp/product_service/src/: product.cpp  product_base.cpp  product_validator.cpp  request_handler_factory.cpp  service_initializer.cpp
cpp/utils/: CMakeLists.txt
cpp/utils/include/: auth_data.h  authentication_request.h  db_config.h  db_session_manager.h  default_request_handler.h  healthcheck_handler.h  http_request_common.h  http_web_server.h  i_service_initializer.h
cpp/utils/src/: auth_data.cpp  authentication_request.cpp  db_config.cpp  db_session_manager.cpp  default_request_handler.cpp  healthcheck_handler.cpp  http_request_common.cpp
doc/: components.md  context.md  task.md
docker/cpp_image/: Dockerfile
docker/proxysql/: Dockerfile
